--- a/2023.09.11/數值計算與資料輸入.ipynb
+++ b/2023.09.11/數值計算與資料輸入.ipynb
@@ -2168,6 +2168,48 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#讓用戶輸入直角三角形的對邊\n",
+    "#讓用戶輸入直角三角形的斜邊\n",
+    "#計算角度\n",
+    "#公式：\n",
+    "#sin(x) = 對邊 / 斜邊\n",
+    "#x是弧度(弧度)\n",
+    "#請輸入對邊:2.5\n",
+    "#請輸入斜邊:5\n",
+    "#直角三角形的角度為:30degree\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 從用戶獲取對邊和斜邊的長度\n",
+    "#opposite = float(input(\"請輸入對邊: \"))\n",
+    "#hypotenuse = float(input(\"請輸入斜邊: \"))\n",
+    "\n",
+    "# 使用反正弦函數計算角度（以弧度為單位）\n",
+    "#angle_radians = math.asin(opposite / hypotenuse)\n",
+    "\n",
+    "# 將弧度轉換為度\n",
+    "#angle_degrees = math.degrees(angle_radians)\n",
+    "\n",
+    "# 輸出結果\n",
+    "#print(\"直角三角形的角度為: {:.2f}degree\".format(angle_degrees))\n",
+    "#這個程式首先要求用戶輸入對邊和斜邊的長度，然後使用反正弦函數 math.asin(opposite / hypotenuse) 計算角度（以弧度為單位）。接著，將角度轉換為度數，並使用math.degrees函數來實現。最後，它會以度數形式輸出直角三角形的角度。輸入的示例值和輸出應該如下所示：\n",
+    "\n",
+    "#請輸入對邊: 2.5\n",
+    "#請輸入斜邊: 5\n",
+    "#直角三角形的角度為: 30.00degree\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
