--- a/2023.09.11/數值計算與資料輸入.ipynb
+++ b/2023.09.11/數值計算與資料輸入.ipynb
@@ -1767,9 +1767,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "#資料輸入\n",
     "#輸入代表數據 輸入\n",
@@ -1781,10 +1790,10 @@
     "#如果輸入整數會設置浮點數處理，輸入字串會產生錯誤消息。\n",
     "# input01.py\n",
     "\n",
-    "a = input(\"輸入整數1a: \") \n",
-    "b = input(\"輸入整數1b: \") \n",
-    "c = int(input(\"int輸入c:\")) \n",
-    "d = int(input(\"int輸入d:\")) \n",
+    "a = input(\"輸入整數1a: 3 \") \n",
+    "b = input(\"輸入整數1b: 5 \") \n",
+    "c = int(input(\"int輸入c: 6 \")) \n",
+    "d = int(input(\"int輸入d: 7 \")) \n",
     "f=a+b\n",
     "g=c+d \n",
     "print(f)\n",
@@ -1793,42 +1802,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "9.0\n"
+     ]
+    }
+   ],
    "source": [
     "#資料輸出入:請動手操作，並留意輸出結果\n",
     "# input02.py\n",
     "\n",
-    "c = int(input(\"int輸入c:\"))\n",
-    "d = int(input(\"int輸入d:\")) \n",
+    "c = int(input(\"int輸入c:3 \"))\n",
+    "d = int(input(\"int輸入d:4 \")) \n",
     "g=c+d\n",
     "print(g)\n",
-    "h = float(input(\"float輸入h:\"))\n",
-    "i = float(input(\"float輸入i:\"))\n",
+    "h = float(input(\"float輸入h:5 \"))\n",
+    "i = float(input(\"float輸入i:6 \"))\n",
     "j=h+d\n",
     "print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class <class 'str'>\n",
+      "3 <class 'str'>\n",
+      "2.0 <class 'float'>\n",
+      "2 <class 'int'>\n",
+      "123 <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "#資料輸出入:請動手操作，並留意輸出結果\n",
     "# input03.py\n",
     "\n",
-    "a = input(\"輸入字串: \")\n",
+    "a = input(\"輸入字串: class \")\n",
     "print(a,a.__class__ )\n",
-    "a = input(\"輸入整數: \")\n",
+    "a = input(\"輸入整數: 3 \")\n",
     "print(a,a.__class__ )\n",
-    "a = float(input(\"float輸入浮點數: \"))\n",
+    "a = float(input(\"float輸入浮點數: 2.0 \"))\n",
     "print(a,a.__class__ )\n",
-    "a = int(input(\"int輸入整數:\"))\n",
-    "print(a,a.__class__ )\n",
-    "a = int(input(\"int輸入字串:\"))\n",
-    "print(a,a.__class__ )"
+    "a = int(input(\"int輸入整數: 2 \"))\n",
+    "a = int(a)  \n",
+    "print(a, a.__class__)\n",
+    "a = int(input(\"int輸入字串: 123 \"))\n",
+    "a = int(a)  \n",
+    "print(a, a.__class__)"
    ]
   },
   {
@@ -1837,11 +1869,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#問題：下列數據輸出哪一個是錯誤的？（選擇題）\n",
-    "#(1) “我可以將整數添加到字符串中，例如“ + str(5) + ”。”\n",
-    "#(2)“我說”+(“嘿”*2)+“嘿！”\n",
-    "#(3) “本多項選擇題的正確答案是答案編號” + 2\n",
-    "#(4) True + False\n",
+    "問題：下列數據輸出哪一個是錯誤的？（選擇題）\n",
+    "(1) “我可以將整數添加到字符串中，例如“ + str(5) + ”。”\n",
+    "(2)“我說”+(“嘿”*2)+“嘿！”\n",
+    "(3) “本多項選擇題的正確答案是答案編號” + 2\n",
+    "(4) True + False\n",
     "\n",
     "#3"
    ]
@@ -1852,12 +1884,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#問題：請執行後面的說明哪一個是對的？（選擇題）\n",
-    "#a,b,c=\"pcschool\",2016,3.41\n",
-    "#print(b)\n",
-    "#(1) 2016\n",
-    "#(2) 3.41\n",
-    "#(3) 電腦學校\n",
+    "問題：請執行後面的說明哪一個是對的？（選擇題）\n",
+    "a,b,c=\"pcschool\",2016,3.41\n",
+    "print(b)\n",
+    "(1) 2016\n",
+    "(2) 3.41\n",
+    "(3) 電腦學校\n",
     "\n",
     "# 1"
    ]
@@ -1868,11 +1900,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#請執行後面的說明哪一個是對的？（選擇題）\n",
-    "#test=(\"abc\"+\"!\")*2\n",
-    "#print(test)\n",
-    "#(1) abc!2\n",
-    "#(2) abc! abc！(3)abc+!*2\n",
+    "請執行後面的說明哪一個是對的？（選擇題）\n",
+    "test=(\"abc\"+\"!\")*2\n",
+    "print(test)\n",
+    "(1) abc!2\n",
+    "(2) abc! abc！(3)abc+!*2\n",
     "\n",
     "# 2"
    ]
@@ -1883,13 +1915,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#問題：請問計算後Z的內容哪一個是對的？（選擇題）\n",
-    "#x=5\n",
-    "#y=7 \n",
-    "#z=x+y+1\n",
-    "#(1) 571\n",
-    "#(2) 1\n",
-    "#(3) 13\n",
+    "問題：請問計算後Z的內容哪一個是對的？（選擇題）\n",
+    "x=5\n",
+    "y=7 \n",
+    "z=x+y+1\n",
+    "(1) 571\n",
+    "(2) 1\n",
+    "(3) 13\n",
     "\n",
     "#13"
    ]
@@ -1903,14 +1935,14 @@
     "#數值計算：請進行操作，並註意輸出結果\n",
     "#num.py\n",
     "\n",
-    "#a,b,c=4,2,5\n",
-    "#d,f=3.25,5.5\n",
-    "#print (a*b) \n",
-    "#print (a**b) \n",
-    "#print (a % 3) \n",
-    "#print (d + f) \n",
-    "#print (c//b) \n",
-    "#print (a/b)\n",
+    "a,b,c=4,2,5\n",
+    "d,f=3.25,5.5\n",
+    "print (a*b) \n",
+    "print (a**b) \n",
+    "print (a % 3) \n",
+    "print (d + f) \n",
+    "print (c//b) \n",
+    "print (a/b)\n",
     "\n",
     "#print(a * b)  # 4 * 2 = 8\n",
     "#print(a ** b)  # 4 ^ 2 = 16\n",
@@ -1926,10 +1958,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#問題：請問執行後面的說明哪一個是對的？（選擇題）\n",
-    "#g,h=9,3\n",
-    "#print(g/h)\n",
-    "#(1) 3 (2) 0 (3) 3.0\n",
+    "問題：請問執行後面的說明哪一個是對的？（選擇題）\n",
+    "g,h=9,3\n",
+    "print(g/h)\n",
+    "(1) 3 (2) 0 (3) 3.0\n",
     "\n",
     "#3.0"
    ]
@@ -1941,7 +1973,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "#讓用戶輸入被除數(整數)及除數(整數，不可以是零)\n",
+    "#輸入被除數(整數)及除數(整數，不可以是零)\n",
     "#計劃會顯示兩數相除的商及餘數。\n",
     "#請輸入被除數(整數):45\n",
     "#請輸入除數(整數,不可以為0):4\n",
@@ -1949,16 +1981,16 @@
     "\n",
     "\n",
     "# 從用戶獲取被除數和除數\n",
-    "#dividend = int(input(\"請輸入被除數(整數): \"))\n",
-    "#divisor = int(input(\"請輸入除數(整數,不可以為0): \"))\n",
+    "dividend = int(input(\"請輸入被除數(整數): \"))\n",
+    "divisor = int(input(\"請輸入除數(整數,不可以為0): \"))\n",
     "\n",
     "# 確保除數不為零\n",
-    "#if divisor == 0:\n",
+    "if divisor == 0:\n",
     "    #print(\"除數不能為零，請重新輸入。\")\n",
-    "#else:\n",
+    "else:\n",
     "    # 計算商和餘數\n",
-    "    #quotient = dividend // divisor\n",
-    "    #remainder = dividend % divisor\n",
+    "    quotient = dividend // divisor\n",
+    "    remainder = dividend % divisor\n",
     "\n",
     "    # 輸出結果\n",
     "    #print(\"商:\", quotient, \"餘數:\", remainder)\n",
@@ -1967,33 +1999,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "兩個數的和是113.14\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "#計算用戶輸入2個不同的數字，程序會顯示2個數字相加的總和。\n",
+    "#計算輸入2個不同的數字，程序會顯示2個數字相加的總和。\n",
     "#請輸入第一個數值:45.67\n",
     "#請輸入第二個數值:67.47\n",
     "#兩個數的和是xxx.xx\n",
     "\n",
     "\n",
-    "# 從用戶獲取兩個數字\n",
-    "#num1 = float(input(\"請輸入第一個數值: \"))\n",
-    "#num2 = float(input(\"請輸入第二個數值: \"))\n",
+    "# 獲取兩個數字\n",
+    "num1 = float(input(\"請輸入第一個數值: 45.67\"))\n",
+    "num2 = float(input(\"請輸入第二個數值: 67.47\"))\n",
     "\n",
     "# 計算兩個數字的總和\n",
-    "#total = num1 + num2\n",
+    "total = num1 + num2\n",
     "\n",
     "# 輸出結果\n",
-    "#print(\"兩個數的和是%.2f\" % total)\n",
-    "#這個程式首先要求用戶輸入兩個數字，然後將這兩個數字相加得到總和。最後，使用%.2f來格式化輸出，確保結果保留兩位小數。輸出將包含總和的結果。\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"兩個數的和是%.2f\" % total)\n"
    ]
   },
   {
@@ -2002,48 +2035,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#複合設計塗層\n",
-    "#當「=」左右兩邊是相同資料時可以使用專業方式：\n",
-    "#省略「=」右邊相同數據。\n",
-    "#將「=」右邊的計算符號移到「=」左邊。\n",
-    "#例如以下操作方式可更改\n",
-    "#x=x+2，可專業為x+=2\n",
-    "#y=y-3，可專業為y-=3\n"
+    "複合設計塗層\n",
+    "當「=」左右兩邊是相同資料時可以使用專業方式：\n",
+    "省略「=」右邊相同數據。\n",
+    "將「=」右邊的計算符號移到「=」左邊。\n",
+    "例如以下操作方式可更改\n",
+    "x=x+2，可專業為x+=2\n",
+    "y=y-3，可專業為y-=3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "剩餘款為:0\n"
+     ]
+    }
+   ],
    "source": [
-    "#專業計算式：請自主操作，並關注輸出結果\n",
     "#money.py\n",
-    "#money = 50000 \n",
-    "#cell = int(input(\"請輸入手機金額:\"))\n",
-    "#money -= cell\n",
-    "#print(\"剩餘款為:\" + str(money)) \n",
+    "money = 50000 \n",
+    "cell = int(input(\"請輸入手機金額:50000\"))\n",
+    "money -= cell\n",
+    "print(\"剩餘款為:\" + str(money)) \n",
     "\n",
-    "#python\n",
-    "#這個程式碼將用戶輸入的手機金額從總金額中扣除，然後輸出剩餘的款項。讓我們執行這個程式碼，並輸入手機金額來觀察輸出結果。\n",
-    "\n",
-    "#假設我們輸入手機金額為 20000，那麼輸出將如下所示：\n",
-    "\n",
-    "\n",
-    "\n",
-    "#請輸入手機金額: 20000\n",
-    "#剩餘款為: 30000\n",
-    "#這表示原始的 money 變數值為 50000，然後從中扣除了 20000，剩餘的款項為 30000。\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "此數的平方是: 4.0\n",
+      "此數的立方是: 8.0\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "#請用戶輸入任意一個數字，方案會顯示該數字的平方值及立方值\n",
+    "#輸入任意一個數字，方案會顯示該數字的平方值及立方值\n",
     "#請輸入任意數:3\n",
     "#此數的平方是:9.0\n",
     "#此數的立方是:27.0\n",
@@ -2051,23 +2091,31 @@
     "\n",
     "#python\n",
     "# 從用戶獲取一個數字\n",
-    "#num = float(input(\"請輸入任意數: \"))\n",
+    "num = float(input(\"請輸入任意數: 2 \"))\n",
     "\n",
     "# 計算該數字的平方和立方\n",
-    "#square = num ** 2\n",
-    "#cube = num ** 3\n",
+    "square = num ** 2\n",
+    "cube = num ** 3\n",
     "\n",
     "# 輸出結果\n",
-    "#print(\"此數的平方是:\", square)\n",
-    "#print(\"此數的立方是:\", cube)\n",
+    "print(\"此數的平方是:\", square)\n",
+    "print(\"此數的立方是:\", cube)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "三個數的總和為: 220.4\n"
+     ]
+    }
+   ],
    "source": [
     "#請以程序（複合進攻指定子）設計，讓使用者輸入三個不同的數，程序會顯示3個數相加的總和（float）\n",
     "#請輸入第一個數:87.9\n",
@@ -2077,93 +2125,75 @@
     "\n",
     "\n",
     "# 從用戶獲取三個不同的數字\n",
-    "#num1 = float(input(\"請輸入第一個數: \"))\n",
-    "#num2 = float(input(\"請輸入第二個數: \"))\n",
-    "#num3 = float(input(\"請輸入第三個數: \"))\n",
-    "\n",
-    "# 計算三個數字的總和\n",
-    "#total = num1 + num2 + num3\n",
-    "\n",
-    "# 輸出結果\n",
-    "#print(\"三個數的總和為:\", total)\n",
-    "#這個程式會要求用戶輸入三個不同的數字，然後計算它們的總和作為浮點數。最後，它會輸出三個數字的總和。輸入的示例值和輸出應該如下所示：\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "num1 = float(input(\"請輸入第一個數: 87.9 \"))\n",
+    "num2 = float(input(\"請輸入第二個數: 45 \"))\n",
+    "num3 = float(input(\"請輸入第三個數: 87.5 \"))\n",
+    "total = num1 + num2 + num3\n",
+    "print(f\"三個數的總和為: {total}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梯形的面積: 15.0平方公分\n"
+     ]
+    }
+   ],
    "source": [
-    "#讓用戶輸入梯形的上底、下底及高，程序會計算梯形的面積(上底加下底乘以高除以2)\n",
-    "#請輸入梯形的上底(公分):5\n",
+    "#輸入梯形的上底、下底及高，程序會計算梯形的面積(上底加下底乘以高除以2)\n",
+    "#輸入梯形的上底(公分):5\n",
     "#請輸入梯形的下底(公分):10\n",
     "#請輸入梯形的高(公分):2\n",
     "#梯形的面積:15平方公分\n",
     "\n",
     "\n",
     "# 從用戶獲取梯形的上底、下底和高\n",
-    "#upper_base = float(input(\"請輸入梯形的上底(公分): \"))\n",
-    "#lower_base = float(input(\"請輸入梯形的下底(公分): \"))\n",
-    "#height = float(input(\"請輸入梯形的高(公分): \"))\n",
+    "upper_base = float(input(\"請輸入梯形的上底(公分): 5 \"))\n",
+    "lower_base = float(input(\"請輸入梯形的下底(公分): 10 \"))\n",
+    "height = float(input(\"請輸入梯形的高(公分): 2 \"))\n",
     "\n",
     "# 計算梯形的面積\n",
-    "#area = (upper_base + lower_base) * height / 2\n",
+    "area = (upper_base + lower_base) * height / 2\n",
     "\n",
     "# 輸出結果\n",
-    "#print(\"梯形的面積: {}平方公分\".format(area))\n",
-    "\n",
-    "#這個程式會要求用戶輸入梯形的上底、下底和高，然後使用梯形面積的公式 (上底 + 下底) * 高 / 2 來計算面積。最後，它會輸出梯形的面積。輸入的示例值和輸出應該如下所示：\n",
-    "\n",
-    "#請輸入梯形的上底(公分): 5\n",
-    "#請輸入梯形的下底(公分): 10\n",
-    "#請輸入梯形的高(公分): 2\n",
-    "#梯形的面積: 15.0平方公分\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"梯形的面積: {}平方公分\".format(area))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "圓柱體的體積:1570.7963267948967立方公分\n"
+     ]
+    }
+   ],
    "source": [
-    "#用戶輸入圓柱體的半徑及高，程序會計算圓柱體的體積\n",
+    "#輸入圓柱體的半徑及高，程序會計算圓柱體的體積\n",
     "#圓柱體體積的公式為「圓周率乘以半徑平方再乘以高」。\n",
     "#請輸入圓柱體的半徑(公分):10\n",
     "#請輸入圓柱體的高(公分):5\n",
     "#圓柱體的體積:xxxx立方公分\n",
     "\n",
-    "\n",
-    "# 從用戶獲取圓柱體的半徑和高度\n",
-    "#radius = float(input(\"請輸入圓柱體的半徑(公分): \"))\n",
-    "#height = float(input(\"請輸入圓柱體的高(公分): \"))\n",
+    "radius = float(input(\"請輸入圓柱體的半徑(公分): 10\"))\n",
+    "height = float(input(\"請輸入圓柱體的高(公分): 5\"))\n",
     "\n",
     "# 計算圓柱體的體積\n",
-    "#volume = math.pi * radius ** 2 * height\n",
+    "import math\n",
+    "volume = math.pi * radius**2 * height\n",
     "\n",
-    "# 輸出結果\n",
-    "#print(\"圓柱體的體積: {:.2f}立方公分\".format(volume))\n",
-    "\n",
-    "\n",
-    "#這個程式首先要求用戶輸入圓柱體的半徑和高度，然後使用圓柱體體積的公式 π * 半徑平方 * 高 來計算體積。在計算中使用了Python的math模組中的π（圓周率）。最後，它會輸出圓柱體的體積。輸入的示例值和輸出應該如下所示：\n",
-    "\n",
-    "\n",
-    "#請輸入圓柱體的半徑(公分): 10\n",
-    "#請輸入圓柱體的高(公分): 5\n",
-    "#圓柱體的體積: 1570.80立方公分\n",
-    "\n",
-    "\n",
+    "# 顯示結果\n",
+    "print(f\"圓柱體的體積:{volume}立方公分\")\n",
     "\n",
     "\n",
     "\n"
@@ -2171,12 +2201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "直角三角形的角度為: 30.00degree\n"
+     ]
+    }
+   ],
    "source": [
-    "#讓用戶輸入直角三角形的對邊\n",
-    "#讓用戶輸入直角三角形的斜邊\n",
+    "#輸入直角三角形的對邊\n",
+    "#輸入直角三角形的斜邊\n",
     "#計算角度\n",
     "#公式：\n",
     "#sin(x) = 對邊 / 斜邊\n",
@@ -2187,23 +2225,19 @@
     "\n",
     "\n",
     "\n",
-    "# 從用戶獲取對邊和斜邊的長度\n",
-    "#opposite = float(input(\"請輸入對邊: \"))\n",
-    "#hypotenuse = float(input(\"請輸入斜邊: \"))\n",
+    "#對邊和斜邊的長度\n",
+    "opposite = float(input(\"請輸入對邊: 2.5 \"))\n",
+    "hypotenuse = float(input(\"請輸入斜邊: 5 \"))\n",
     "\n",
     "# 使用反正弦函數計算角度（以弧度為單位）\n",
-    "#angle_radians = math.asin(opposite / hypotenuse)\n",
+    "angle_radians = math.asin(opposite / hypotenuse)\n",
     "\n",
     "# 將弧度轉換為度\n",
-    "#angle_degrees = math.degrees(angle_radians)\n",
+    "angle_degrees = math.degrees(angle_radians)\n",
     "\n",
     "# 輸出結果\n",
-    "#print(\"直角三角形的角度為: {:.2f}degree\".format(angle_degrees))\n",
-    "#這個程式首先要求用戶輸入對邊和斜邊的長度，然後使用反正弦函數 math.asin(opposite / hypotenuse) 計算角度（以弧度為單位）。接著，將角度轉換為度數，並使用math.degrees函數來實現。最後，它會以度數形式輸出直角三角形的角度。輸入的示例值和輸出應該如下所示：\n",
+    "print(\"直角三角形的角度為: {:.2f}degree\".format(angle_degrees))\n",
     "\n",
-    "#請輸入對邊: 2.5\n",
-    "#請輸入斜邊: 5\n",
-    "#直角三角形的角度為: 30.00degree\n",
     "\n",
     "\n",
     "\n",
