--- a/Lesson05.ipynb
+++ b/Lesson05.ipynb
@@ -308,6 +308,51 @@
     "n=n+20\n",
     "n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5235987755982988\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "n1 = float(input('請輸入對邊'))\n",
+    "n2 = float(input('請輸入斜邊'))\n",
+    "print(math.asin (n1/n2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "對邊： 35.0 cm,斜邊 73.0 cm,角度 28.65 度\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "n1 = float(input('請輸入對邊'))\n",
+    "n2 = float(input('請輸入斜邊'))\n",
+    "radian =(math.asin (n1/n2))\n",
+    "#radian / math.pi * 180\n",
+    "dergrees = round(math.degrees(radian),ndigits=2)\n",
+    "print('對邊：',n1,'cm,斜邊',n2,'cm,角度',dergrees,'度')"
+   ]
   }
  ],
  "metadata": {
