--- a/Lesson05.ipynb
+++ b/Lesson05.ipynb
@@ -332,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "對邊： 35.0 cm,斜邊 73.0 cm,角度 28.65 度\n"
+      "對邊：2.5cm,斜邊5.0cm,角度30.0度.\n"
      ]
     }
    ],
@@ -351,8 +351,15 @@
     "radian =(math.asin (n1/n2))\n",
     "#radian / math.pi * 180\n",
     "dergrees = round(math.degrees(radian),ndigits=2)\n",
-    "print('對邊：',n1,'cm,斜邊',n2,'cm,角度',dergrees,'度')"
+    "print('對邊：',n1,'cm,斜邊',n2,'cm,角度',dergrees,'度',sep=\"\",end='.\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
