--- a/Lesson05.ipynb
+++ b/Lesson05.ipynb
@@ -351,7 +351,8 @@
     "radian =(math.asin (n1/n2))\n",
     "#radian / math.pi * 180\n",
     "dergrees = round(math.degrees(radian),ndigits=2)\n",
-    "print('對邊：',n1,'cm,斜邊',n2,'cm,角度',dergrees,'度',sep=\"\",end='.\\n')"
+    "print('對邊：',n1,'cm,斜邊',n2,'cm,角度',dergrees,'度',sep=\"\",end='.\\n')\n",
+    "#.\\n = [file=none]"
    ]
   },
   {
