--- a/Lesson05.ipynb
+++ b/Lesson05.ipynb
@@ -357,10 +357,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "對邊:2.5cm,斜邊：5.0cm,角度:30.0度\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "n1 = float(input('請輸入對邊'))\n",
+    "n2 = float(input('請輸入斜邊'))\n",
+    "radian =(math.asin (n1/n2))\n",
+    "#radian / math.pi * 180\n",
+    "dergrees = round(math.degrees(radian),ndigits=2)\n",
+    "\n",
+    "#以下寫法都可以\n",
+    "#print('對邊：',n1,'cm,斜邊',n2,'cm,角度',dergrees,'度',sep=\"\",end='.\\n')\n",
+    "\n",
+    "#print(\"對邊：{0:.2f}cm,斜邊：{1:.2f}cm,角度：{2:.2f}度\".format(n1,n2,dergrees))\n",
+    "\n",
+    "#print(f\"對邊：{n1:.2f}cm,斜邊：{n2:.2f}cm,角度：{dergrees:.2f}度\")\n",
+    "\n",
+    "#print(f\"對邊:{n1}cm,斜邊：{n2}cm,角度:{dergrees}度\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
