--- a/Lesson05.ipynb
+++ b/Lesson05.ipynb
@@ -389,6 +389,56 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.94418483337567"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "#statistics.mean((1,2,3,4,4))\n",
+    "#statistics.mean((0,5,9,14))\n",
+    "#statistics.mean((5,6,8,9,))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.94418483337567, 1.8257418583505538)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "\n",
+    "#statistics.stdev((1,2,3,4,4))\n",
+    "#statistics.stdev((5,6,8,9,))\n",
+    "statistics.stdev((0,5,9,14)) ,statistics.stdev((5,6,8,9,))\n",
+    "#雖然平均差都是7，但標準差是不同的。\n"
+   ]
   }
  ],
  "metadata": {
