--- a/Lesson05.ipynb
+++ b/Lesson05.ipynb
@@ -392,16 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.94418483337567"
+       "7"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,8 +410,7 @@
     "import statistics\n",
     "#statistics.mean((1,2,3,4,4))\n",
     "#statistics.mean((0,5,9,14))\n",
-    "#statistics.mean((5,6,8,9,))\n",
-    "\n",
+    "statistics.mean((5,6,8,9,))\n",
     "\n"
    ]
   },
@@ -438,6 +437,16 @@
     "#statistics.stdev((5,6,8,9,))\n",
     "statistics.stdev((0,5,9,14)) ,statistics.stdev((5,6,8,9,))\n",
     "#雖然平均差都是7，但標準差是不同的。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#小數點精準運算的Decimal 模組（小數點）\n",
+    "\n"
    ]
   }
  ],
