--- a/Lesson05.ipynb
+++ b/Lesson05.ipynb
@@ -479,7 +479,7 @@
     }
    ],
    "source": [
-    "import math\n",
+    "import math #數值計算與資料數入 作業 \n",
     "math.log(1000,10)\n",
     "math.log(22000/20000) / math.log(1.011)\n"
    ]
