--- a/Lesson06.ipynb
+++ b/Lesson06.ipynb
@@ -109,6 +109,38 @@
     "\n",
     "print(f\"學生總分是:{scores}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生分數不可以大於300\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生總分為300\n",
+    "#有些學生可以加分5%\n",
+    "#如果加分超過300,就以300分為準\n",
+    "\n",
+    "scores = int(input(\"請輸入學生分數(最高分300分):\"))\n",
+    "if scores <= 300:\n",
+    "    is_add = input(\"請問是否符合加分條件?(y,n)\")  #True\n",
+    "\n",
+    "    if is_add == \"y\": #True\n",
+    "       scores *= 1.05\n",
+    "       if scores > 300: #True #False #巢狀判斷\n",
+    "          scores = 300\n",
+    "    print(f\"學生總分是:{scores}\")\n",
+    "else:\n",
+    "    print(\"學生分數不可以大於300\")        \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
