--- a/Lesson06_2.ipynb
+++ b/Lesson06_2.ipynb
@@ -94,10 +94,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function inputNum in module pyinputplus:\n",
+      "\n",
+      "inputNum(prompt='', default=None, blank=False, timeout=None, limit=None, strip=None, allowRegexes=None, blockRegexes=None, applyFunc=None, postValidateApplyFunc=None, min=None, max=None, greaterThan=None, lessThan=None)\n",
+      "    Prompts the user to enter a number, either an integer or a floating-point\n",
+      "    value. Returns an int or float value (depending on if the user entered a\n",
+      "    decimal in their input.)\n",
+      "    \n",
+      "    Run ``help(pyinputplus.parameters)`` for an explanation of the common parameters.\n",
+      "    \n",
+      "    * ``min`` (None, float): If not ``None``, the minimum accepted numeric value, including the minimum argument.\n",
+      "    * ``max`` (None, float): If not ``None``, the maximum accepted numeric value, including the maximum argument.\n",
+      "    * ``greaterThan`` (None, float): If not ``None``, the minimum accepted numeric value, not including the ``greaterThan`` argument.\n",
+      "    * ``lessThan`` (None, float): If not ``None``, the maximum accepted numeric value, not including the ``lessThan`` argument.\n",
+      "    \n",
+      "    >>> import pyinputplus as pyip\n",
+      "    >>> response = pyip.inputNum()\n",
+      "    forty two\n",
+      "    'forty two' is not a number.\n",
+      "    42\n",
+      "    >>> response\n",
+      "    42\n",
+      "    >>> response = pyip.inputNum()\n",
+      "    9\n",
+      "    >>> type(response)\n",
+      "    <class 'int'>\n",
+      "    >>> response = pyip.inputNum()\n",
+      "    9.0\n",
+      "    >>> type(response)\n",
+      "    <class 'float'>\n",
+      "    >>> response = pyip.inputNum(min=4)\n",
+      "    3\n",
+      "    Number must be at minimum 4.\n",
+      "    4\n",
+      "    >>> response\n",
+      "    4\n",
+      "    >>> response = pyip.inputNum(greaterThan=4)\n",
+      "    4\n",
+      "    Number must be greater than 4.\n",
+      "    4.1\n",
+      "    >>> response\n",
+      "    4.1\n",
+      "    >>> response = pyip.inputNum(limit=2)\n",
+      "    dog\n",
+      "    'dog' is not a number.\n",
+      "    cat\n",
+      "    'cat' is not a number.\n",
+      "    Traceback (most recent call last):\n",
+      "        ...\n",
+      "    pyinputplus.RetryLimitException\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help (pyip.inputNum) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入學生分數(最高分300分):學生總分是:294.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生總分為300\n",
+    "#有些學生可以加分5%\n",
+    "#如果加分超過300,就以300分為準\n",
+    "#縮排不對就會出錯，程式區塊利用縮排\n",
+    "\n",
+    "import pyinputplus as pyip\n",
+    "scores = pyip.inputInt(prompt=\"請輸入學生分數(最高分300分):\",min=0,max=300)\n",
+    "    \n",
+    "is_add = input(\"請問是否符合加分條件?(y,n)\")  #True\n",
+    "if is_add == \"y\": #True\n",
+    "    scores *= 1.05\n",
+    "    if scores > 300: #False \n",
+    "       scores = 300\n",
+    "print(f\"學生總分是:{scores}\")\n",
+    "   "
+   ]
   }
  ],
  "metadata": {
