--- a/Lesson06_2.ipynb
+++ b/Lesson06_2.ipynb
@@ -188,6 +188,66 @@
     "print(f\"學生總分是:{scores}\")\n",
     "   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#外部套件可以使用\n",
+    "#https://pypi.org/project/PyInputPlus/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入x:-4\n",
+      "請輸入y:2\n",
+      "\n",
+      "虛數\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 如果x不是負數，則傳回值為 x ** (1 / y)。\n",
+    "# 如果x是負數而且為偶數，則傳回值為\"虛數\"。\n",
+    "# 如果x是負數而且為奇數，則傳回值為 -(-x) ** (1 / y)\n",
+    "\n",
+    "#程式區塊裡面一定要有值\n",
+    "#唯一的缺點就強迫要打數字\n",
+    "#巢狀判斷來解決 表示「一個判斷式裡，還有另外n個判斷」\n",
+    "#就像鳥巢一般一層一層判斷下去，下面的方案執行後，會先印出a>b，然後進行第二個一層判斷印出a=2，最後再印出ok。\n",
+    "\n",
+    "\n",
+    "import pyinputplus as pyip\n",
+    "\n",
+    "x = pyip.inputInt(\"請輸入x:\")\n",
+    "print(x)\n",
+    "y = pyip.inputInt(\"請輸入y:\")\n",
+    "print(y)\n",
+    "\n",
+    "if x >= 0:\n",
+    "    root = x ** (1/y)\n",
+    "else:\n",
+    "     if x % 2 == 0:\n",
+    "         root = '虛數'\n",
+    "     \n",
+    "     else:\n",
+    "        root = -(-x) **  (1/y) \n",
+    "        \n",
+    "print()                \n",
+    "print(root)    \n",
+    "     \n",
+    " \n",
+    " "
+   ]
   }
  ],
  "metadata": {
