--- a/Lesson06_2.ipynb
+++ b/Lesson06_2.ipynb
@@ -225,6 +225,8 @@
     "#巢狀判斷來解決 表示「一個判斷式裡，還有另外n個判斷」\n",
     "#就像鳥巢一般一層一層判斷下去，下面的方案執行後，會先印出a>b，然後進行第二個一層判斷印出a=2，最後再印出ok。\n",
     "\n",
+    "#https://steam.oxxostudio.tw/category/python/basic/if.html#:~:text=ok')%20%23%20ok-,%E5%B7%A2%E7%8B%80%E5%88%A4%E6%96%B7,%E6%9C%80%E5%BE%8C%E5%86%8D%E5%8D%B0%E5%87%BAok%E3%80%82\n",
+    "\n",
     "\n",
     "import pyinputplus as pyip\n",
     "\n",
@@ -248,6 +250,13 @@
     " \n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
