--- a/Lesson06_2.ipynb
+++ b/Lesson06_2.ipynb
@@ -256,7 +256,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 90(含)~100分為「優」\n",
+    "# 80(含)~89分為「甲」\n",
+    "# 70(含)~79分為「乙」\n",
+    "# 60(含)~69分為「丙」\n",
+    "# 0(含)~59分為「丁」\n",
+    "\n",
+    "\n",
+    "score = pyip.inputInt(\"請輸入學生分數:\",min=0,max=100)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
