--- a/Lesson06_2.ipynb
+++ b/Lesson06_2.ipynb
@@ -263,8 +263,10 @@
     "# 60(含)~69分為「丙」\n",
     "# 0(含)~59分為「丁」\n",
     "\n",
-    "\n",
+    "import pyinputplus  as pyip\n",
     "score = pyip.inputInt(\"請輸入學生分數:\",min=0,max=100)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
