--- a/2023.09.11/2023.09.18.作業.ipynb
+++ b/2023.09.11/2023.09.18.作業.ipynb
@@ -13,7 +13,7 @@
     "# 0(含)~59分為「丁」\n",
     "\n",
     "import pyinputplus  as pyip\n",
-    "score = pyip.inputInt(\"請輸入學生分數:\",min=0,max=100)\n"
+    "score = pyip.inputInt(\"請輸入學生分數:\",min=0,max=100)"
    ]
   }
  ],
