--- a/2023.09.11/2023.09.18.作業.ipynb
+++ b/2023.09.11/2023.09.18.作業.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入學生分數:優\n"
+     ]
+    }
+   ],
    "source": [
     "# 90(含)~100分為「優」\n",
     "# 80(含)~89分為「甲」\n",
@@ -13,13 +21,42 @@
     "# 0(含)~59分為「丁」\n",
     "\n",
     "import pyinputplus  as pyip\n",
-    "score = pyip.inputInt(\"請輸入學生分數:\",min=0,max=100)"
+    "score = pyip.inputInt(\"請輸入學生分數:\",min=0,max=100)\n",
+    "\n",
+    "if score >= 90:\n",
+    "    print ('優')\n",
+    "else:  \n",
+    "    if score >= 80:\n",
+    "        print('甲')\n",
+    "    else:\n",
+    "        if score >= 70:\n",
+    "            print('乙')\n",
+    "        else:\n",
+    "            if score >= 60:\n",
+    "                print('丙')\n",
+    "            else:  \n",
+    "                print('丁')     \n",
+    "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
