--- a/2023.09.11/2023.09.18.作業.ipynb
+++ b/2023.09.11/2023.09.18.作業.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入學生分數:優\n"
+      "請輸入學生分數:'12a' is not an integer.\n",
+      "請輸入學生分數:丁\n"
      ]
     }
    ],
