--- a/2023.09.11/2023.09.18.作業.ipynb
+++ b/2023.09.11/2023.09.18.作業.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "請輸入學生分數:"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'j' is not an integer.\n",
+      "請輸入學生分數:'l' is not an integer.\n",
       "請輸入學生分數:丁\n"
      ]
     }
