--- a/Lesson07_1.ipynb
+++ b/Lesson07_1.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyinputplus'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb 儲存格 1\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# 90(含)~100分為「優」\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# 80(含)~89分為「甲」\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# 70(含)~79分為「乙」\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# 60(含)~69分為「丙」\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# 0(含)~59分為「丁」\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyinputplus\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpyip\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m scores \u001b[39m=\u001b[39m pyip\u001b[39m.\u001b[39minputInt(prompt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m請輸入分數\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39mmin\u001b[39m\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m,\u001b[39mmax\u001b[39m\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/Lesson07_1.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(scores)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyinputplus'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入分數90\n"
      ]
     }
    ],
@@ -48,21 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入分數"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40\n"
+      "請輸入分數:50\n",
+      "丁\n"
      ]
     }
    ],
@@ -73,25 +63,65 @@
     "# 60(含)~69分為「丙」\n",
     "# 0(含)~59分為「丁」\n",
     "import pyinputplus as pyip\n",
-    "scores = pyip.inputInt(prompt=\"請輸入分數\",min=0,max=100)\n",
+    "scores = pyip.inputInt(prompt=\"請輸入分數:\",min=0,max=100)\n",
     "print(scores)\n",
-    "scores = 78\n",
     "message = \"\"\n",
-    "#巢狀判斷,4個if\n",
-    "\n",
-    "if  scores >= 90:\n",
+    "#多項選擇,1個if\n",
+    "if scores >= 90:\n",
     "    message = \"優\"\n",
+    "elif scores >= 80:    \n",
+    "    message = \"甲\"\n",
+    "elif scores >= 70:     \n",
+    "    message = \"乙\"\n",
+    "elif scores >= 60:     \n",
+    "    message = \"丙\"\n",
     "else:\n",
-    "    if scores >= 80:\n",
-    "        message =\"甲\"\n",
-    "    else:\n",
-    "       if scores >= 70:\n",
-    "        message =\"乙\"\n",
-    "       else:\n",
-    "            if scores >= 60:\n",
-    "                message =\"丙\"\n",
-    "            else:\n",
-    "             message =\"丁\""
+    "    message = \"丁\"\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入金額:130000\n",
+      "實付金額是： 104000.0 元\n"
+     ]
+    }
+   ],
+   "source": [
+    "#輸入顧客購買金額，若金額在\n",
+    "#100000元打8折. \n",
+    "#50000打85折. \n",
+    "#30000打9折. \n",
+    "#10000打95折. \n",
+    "\n",
+    "#請輸入購買金額:130000\n",
+    "#實付金額是: 104000.0 元\n",
+    "\n",
+    "\n",
+    "import pyinputplus as pyip\n",
+    "scores = pyip.inputInt(prompt=\"請輸入金額:\")\n",
+    "print(scores)\n",
+    "message =\"\"\n",
+    "if scores >= 100000:\n",
+    "   message = scores * 0.8\n",
+    "elif scores >= 50000:\n",
+    "   message = scores * 0.85\n",
+    "elif scores >= 30000:\n",
+    "    message = scores * 0.9\n",
+    "elif scores >= 10000:\n",
+    "    message = scores * 0.95\n",
+    "else:\n",
+    "    message = scores    \n",
+    "\n",
+    "print('實付金額是：',message,'元')\n",
+    "    "
    ]
   }
  ],
