--- a/Lesson07_1.ipynb
+++ b/Lesson07_1.ipynb
@@ -82,15 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入金額:130000\n",
-      "實付金額是： 104000.0 元\n"
+      "請輸入金額:5000\n",
+      "實付金額是：  元\n"
      ]
     }
    ],
@@ -118,10 +118,51 @@
     "elif scores >= 10000:\n",
     "    message = scores * 0.95\n",
     "else:\n",
-    "    message = scores    \n",
+    "    message =5000   \n",
     "\n",
     "print('實付金額是：',message,'元')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入金額:10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#輸入顧客購買金額\n",
+    "#滿千送百後再打折\n",
+    "#100000元打8折. \n",
+    "#50000打85折. \n",
+    "#30000打9折. \n",
+    "#10000打95折.\n",
+    "\n",
+    "import pyinputplus as pyip\n",
+    "money = pyip.inputInt(prompt=\"請輸入金額:\")\n",
+    "print(money)\n",
+    "discount = money // 1000 * 100\n",
+    "money -= discount\n",
+    "\n",
+    "if money >= 100000:\n",
+    "   message = money * 0.8\n",
+    "elif money >= 50000:\n",
+    "   message = money * 0.85\n",
+    "elif money >= 30000:\n",
+    "    message = money * 0.9\n",
+    "elif money >= 10000:\n",
+    "    message = money * 0.95\n",
+    "else:\n",
+    "    message =5000   \n",
+    "\n",
+    "\n"
    ]
   }
  ],
