--- a/Lesson07_1.ipynb
+++ b/Lesson07_1.ipynb
@@ -126,14 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入金額:10000\n"
+      "請輸入金額:100000\n",
+      "實付金額是： 90000 元\n"
      ]
     }
    ],
@@ -160,9 +161,9 @@
     "elif money >= 10000:\n",
     "    message = money * 0.95\n",
     "else:\n",
-    "    message =5000   \n",
+    "    message = money \n",
     "\n",
-    "\n"
+    "print('實付金額是：',money,'元')\n"
    ]
   }
  ],
