--- a/Lesson07_1.ipynb
+++ b/Lesson07_1.ipynb
@@ -148,8 +148,8 @@
     "\n",
     "import pyinputplus as pyip\n",
     "money = pyip.inputInt(prompt=\"請輸入金額:\")\n",
-    "print(money)\n",
-    "discount = money // 1000 * 100\n",
+    "print(money) \n",
+    "discount = money // 1000 * 100 #折扣discount設值為 money //1000*100 (滿千送百) \n",
     "money -= discount\n",
     "\n",
     "if money >= 100000:\n",
@@ -164,6 +164,51 @@
     "    message = money \n",
     "\n",
     "print('實付金額是：',money,'元')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入國文分數90\n",
+      "請輸入數學分數99\n",
+      "獎金：500\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#關係運算子\n",
+    "# == 兩邊是否相等\n",
+    "# > 大於\n",
+    "# < 小於\n",
+    "# != 兩邊不相等\n",
+    "# >= 大於等於\n",
+    "# <= 小於等於\n",
+    "\n",
+    "chinese = pyip.inputInt(\"請輸入國文分數\")\n",
+    "print(chinese)\n",
+    "math = pyip.inputInt(\"請輸入數學分數\")\n",
+    "print(math)\n",
+    "\n",
+    "#chinese = 1000\n",
+    "#math  = 500\n",
+    "\n",
+    "\n",
+    "if chinese == 100 and math == 100:\n",
+    "    bonus = 1000\n",
+    "elif chinese == 100 or math == 100:\n",
+    "    bonus = 500\n",
+    "else:\n",
+    "    bonus = 0\n",
+    "print(f\"獎金：{bonus}\")    \n",
+    "    \n",
+    "\n"
    ]
   }
  ],
