--- a/2023.09.11/2023.09.20BMI.ipynb
+++ b/2023.09.11/2023.09.20BMI.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入身高cm:177\n",
-      "請輸入體重kg:80\n",
-      "0.0025535446391522234 您的體重過重\n"
+      "請輸入身高cm:180\n",
+      "請輸入體重kg:90\n",
+      "27.777777777777775 您的體重過重\n"
      ]
     }
    ],
@@ -23,9 +23,10 @@
     "print(height_cm)\n",
     "weight_kg= pyip.inputInt(\"請輸入體重kg:\")\n",
     "print(weight_kg)\n",
-    "bmi = weight_kg / (height_cm ** 2)\n",
     "\n",
     "\n",
+    "height_m = height_cm / 100 \n",
+    "bmi = weight_kg / (height_m ** 2)\n",
     "\n",
     "if bmi < 18.5:\n",
     "  message = \"太輕\"\n",
@@ -45,16 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140\n",
-      "90\n",
-      "請輸入收縮壓 140 請輸入舒張壓 90\n"
+      "120\n",
+      "46\n",
+      "請輸入收縮壓 120 請輸入舒張壓 46\n",
+      "請輸入有效的血壓數值\n"
      ]
     }
    ],
@@ -74,16 +76,17 @@
     "    message = \"血壓升高\"\n",
     "elif sbp < 139 or dbp < 89:\n",
     "    message = \"高血壓一期\" \n",
-    "elif sbp >= 140 or dbp >= 90: \n",
+    "else:\n",
+    "    \n",
     "    message = \"高血壓二期\"\n",
-    "elif sbp > 130 and dbp < 80 :\n",
+    "if sbp > 130 and dbp < 80 :\n",
     "    message =\"單純收縮期高血壓\"    \n",
     "else:\n",
     "    message = \"請輸入有效的血壓數值\"\n",
     "        \n",
     "        \n",
     "print('請輸入收縮壓',sbp,'請輸入舒張壓',dbp)\n",
-    "       \n",
+    "print(message) \n",
     "        \n"
    ]
   }
